<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@xml/white_radial_gradient"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".RegistrationActivity" >

	<LinearLayout
        android:id="@+id/linearLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="5dp"
        android:weightSum="3"
        android:layout_alignParentTop="true"
	    android:orientation="horizontal" >
	
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="1.0"
	        android:background="@color/red"/>
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="1.0"
	        android:background="@color/yellow"/>
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="1.0"
	        android:background="@color/green"/>
	
	</LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:weightSum="1" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:orientation="vertical"
            android:padding="0dp" >

            <ImageView
                android:id="@+id/imgSurveyIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/voto_header_medium" />

            <ProgressBar
                android:id="@+id/mediaLoading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:visibility="invisible" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.10"
                    android:background="@xml/phone_icon"
                    android:src="@drawable/login_phone_icon" />

                <EditText
                    android:id="@+id/txtPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.90"
                    android:background="@xml/custom_edit_text"
                    android:ems="10"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone"
                    android:textColor="@color/white"
                    android:textColorHint="@color/bluishwhite"
                    android:textCursorDrawable="@null" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@xml/button"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <RelativeLayout
                android:id="@+id/mediaLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/notificationsCheckBox"
                    android:layout_alignBottom="@+id/notificationsCheckBox"
                    android:layout_alignParentRight="true"
                    android:text="@string/sign_up"
                    android:textColor="@color/darkgrey"
                    android:textColorLink="@color/darkgrey" />

                <CheckBox
                    android:id="@+id/notificationsCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:button="@xml/checkbox"
                    android:padding="5dp"
                    android:text="@string/remember_me"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/darkgrey" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
	
	<LinearLayout
        android:id="@+id/linearLayout3"
	    android:layout_width="match_parent"
	    android:layout_height="5dp"
        android:weightSum="3"
        android:layout_alignParentBottom="true"
	    android:orientation="horizontal" >
	
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="1.0"
	        android:background="@color/red"/>
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="1.0"
	        android:background="@color/yellow"/>
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="1.0"
	        android:background="@color/green"/>
	
	</LinearLayout>

</RelativeLayout>